[project]
name = "enterprise-agentic-rag"
version = "0.1.0"
description = "Enterprise Document Intelligence Platform using Agentic AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "redis>=5.0.0",
    "opensearch-py>=2.7.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langfuse>=3.0.0",
    "docling>=2.0.0",
    "pypdfium2>=4.30.0",
    "gradio>=5.0.0",
    "pymupdf>=1.24.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.3.0",
    "google-genai>=1.0.0",
    "alembic>=1.12.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
